[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ko2cube"
version = "0.1.0"
description = "ko2cube project"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0"
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
server = "server.app:main"
